# DjangoProject8Courses

./: manage.py  pyproject.toml
DjangoProject8cbvCourses/: asgi.py  settings.py  urls.py  wsgi.py
cbvApp/: models.py  views.py
templates/cbvApp/: course_confirm_delete.html  course_detail.html  course_form.html  course_list.html
